# NTM-Profiler

./: README.md  env.yml  pyproject.toml  setup.py
conda/: linux.explicit.txt
db/: ntm_db.kmers.txt
db/resistance/mabs/: mabs.csv
ntm_profiler/: __init__.py  cli.py  db.py  kmer.py  models.py  output.py  reformat.py  utils.py
scripts/: ntm-profiler
tests/: ERR459870.results.json  run_test.py
