[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ntm_profiler"
authors = [{name = "Jody Phelan", email = "jody.phelan@lshtm.ac.uk"}]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.scripts]
ntm-profiler = "ntm_profiler:cli.cli_entrypoint"